<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/size_48"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:gravity="bottom"
    android:orientation="horizontal"
    >


    <LinearLayout
        android:id="@+id/tab_shelf"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_42"
        android:layout_weight="1"
        android:background="#323331"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_20"
            android:scaleType="centerInside"
            android:src="@drawable/read"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_shelf"
            android:textSize="@dimen/text_size_s"
            android:textColor="@drawable/bottomtext"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_wish"
        android:layout_width="wrap_content"
        android:background="#323331"
        android:layout_height="@dimen/size_42"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_20"
            android:scaleType="centerInside"
            android:src="@drawable/read"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_wish"
            android:textSize="@dimen/text_size_s"
            android:textColor="@drawable/bottomtext"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_readcode"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:background="@drawable/corner"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_24"
            android:scaleType="centerInside"
            android:src="@drawable/read"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_scan"
            android:textSize="@dimen/text_size_s"
            android:textColor="@drawable/bottomtext"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_explore"
        android:layout_width="wrap_content"
        android:background="#323331"
        android:layout_height="@dimen/size_42"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_20"
            android:scaleType="centerInside"
            android:src="@drawable/read"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_explore"
            android:textSize="@dimen/text_size_s"
            android:textColor="@drawable/bottomtext"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_timeline"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_42"
        android:layout_weight="1"
        android:background="#323331"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_20"
            android:scaleType="centerInside"
            android:src="@drawable/read"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_timeline"
            android:textSize="@dimen/text_size_s"
            android:textColor="@drawable/bottomtext"
            />
    </LinearLayout>
</LinearLayout>